# oneshot

./: README.md  pyproject.toml  test_slides.html
agents/: oneshot_agent.md  research_agent.md
tools/: agent_caller.py
