[project]
name = "oneshot"
version = "0.1.0"
description = "Vibe Code Your Own AI Agent System"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai",
    "python-dotenv",
    "pyyaml",
    "logfire",
    "jinja2>=3.1,<4",
    "yt-dlp",
    "openai",
    "requests",
    "pathlib2",
    "fastmcp",
    "beautifulsoup4",
    "fastapi",
    "pydantic",
    "pydantic-core",
    "tiktoken>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
